--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -45,8 +45,37 @@
   height: 1.8em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+  float: left;
 }
-
+.label {
+    color: #607D8B;
+    font-weight: bold;
+}
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+      .selectedProject{
+            float: right;
+            position: fixed;
+            margin-top: -20%;
+            left:45%;
+            width: 25em;
+        }
+}
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+      .selectedProject{
+            float: right;
+            position: fixed;
+            margin-top: -25%;
+            left:45%;
+            width: 25em;
+        }
+}
 
 /*
 Copyright 2017-2018 Google Inc. All Rights Reserved.
